--- a/index.html
+++ b/index.html
@@ -11,6 +11,10 @@
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
     />
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css"
+    />
     <link rel="stylesheet" href="./css/output.css" />
   </head>
   <body>
@@ -102,22 +106,102 @@
 
     <section class="wrapper bg-[#f2f2f2]">
       <div class="container1 p-[30px_0_30px_0]">
-        <div class="flex items-center rounded-[16px]">
-          <div class="p-[80px_50px] bg-[#fff] rounded-[16px_0_0_16px]">
-            <h1 class="text-[48px] font-[500] max-w-[413px]">Откройте для себя мир поиска и безопасности</h1>
-            <p class="text-[20px] font-[400] p-[20px_0_60px_0]">Все о компании «Метаскан» за одну минуту</p>
-            <button
-              class="p-[10px_12px] border border-solid border-[#000] bg-[#000] text-[#fff] rounded-[8px] text-[14px] font-[400]"
-            >
-              Заказать звонок
-            </button>
+        <div class="swiper mySwiper">
+          <div class="swiper-wrapper">
+            <div class="swiper-slide">
+              <div class="flex items-center rounded-[16px] bg-black">
+                <div class="p-[80px_20px] bg-[#fff] items-start rounded-[16px_0_0_16px]">
+                  <h1 class="text-[48px] font-[500] max-w-[413px]">
+                    Откройте для себя мир поиска и безопасности
+                  </h1>
+                  <p class="text-[20px] font-[400] p-[20px_0_60px_0]">
+                    Все о компании «Метаскан» за одну минуту
+                  </p>
+                  <button
+                    class="p-[10px_12px] border border-solid border-[#000] bg-[#000] text-[#fff] rounded-[8px] text-[14px] font-[400]"
+                  >
+                    Заказать звонок
+                  </button>
+                </div>
+                <video
+                  controls
+                  poster="./wrapper-img.png"
+                  class="w-[900px] h-[100%] bg-black"
+                  src="./baq948wc6vvi9w0ab203.mp4"
+                ></video>
+              </div>
+            </div>
+            <div class="swiper-slide">
+              <div class="flex items-center rounded-[16px] bg-black">
+                <div class="p-[80px_20px] bg-[#fff] rounded-[16px_0_0_16px]">
+                  <h1 class="text-[48px] font-[500] max-w-[413px]">
+                    Откройте для себя мир поиска и безопасности
+                  </h1>
+                  <p class="text-[20px] font-[400] p-[20px_0_60px_0]">
+                    Все о компании «Метаскан» за одну минуту
+                  </p>
+                  <button
+                    class="p-[10px_12px] border border-solid border-[#000] bg-[#000] text-[#fff] rounded-[8px] text-[14px] font-[400]"
+                  >
+                    Заказать звонок
+                  </button>
+                </div>
+                <video
+                  controls
+                  poster="./wrapper-img.png"
+                  class="w-[900px] h-[100%] bg-black"
+                  src="./baq948wc6vvi9w0ab203.mp4"
+                ></video>
+              </div>
+            </div>
+            <div class="swiper-slide">
+              <div class="flex items-center rounded-[16px] bg-black">
+                <div class="p-[80px_20px] bg-[#fff] rounded-[16px_0_0_16px]">
+                  <h1 class="text-[48px] font-[500] max-w-[413px]">
+                    Откройте для себя мир поиска и безопасности
+                  </h1>
+                  <p class="text-[20px] font-[400] p-[20px_0_60px_0]">
+                    Все о компании «Метаскан» за одну минуту
+                  </p>
+                  <button
+                    class="p-[10px_12px] border border-solid border-[#000] bg-[#000] text-[#fff] rounded-[8px] text-[14px] font-[400]"
+                  >
+                    Заказать звонок
+                  </button>
+                </div>
+                <video
+                  controls
+                  poster="./wrapper-img.png"
+                  class="w-[900px] h-[100%] bg-black"
+                  src="./baq948wc6vvi9w0ab203.mp4"
+                ></video>
+              </div>
+            </div>
           </div>
-            <video  controls poster="./wrapper-img.png" class="" src="./baq948wc6vvi9w0ab203.mp4"></video>
         </div>
       </div>
     </section>
+    <section>
 
+      <div class="container1">
+    >
+          <div class=bg-red>
+
+          </div>
+      </div>
+    </section>
 
     <script src="./main.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
+
+    <!-- Initialize Swiper -->
+    <script>
+      var swiper = new Swiper(".mySwiper", {
+      
+        autoplay: {
+          delay: 1000,
+        },
+      });
+    </script>
   </body>
 </html>
