--- a/index.html
+++ b/index.html
@@ -109,16 +109,24 @@
         <div class="swiper mySwiper">
           <div class="swiper-wrapper">
             <div class="swiper-slide">
-              <div class="flex items-center rounded-[16px] bg-black">
-                <div class="p-[80px_20px] bg-[#fff] items-start rounded-[16px_0_0_16px]">
-                  <h1 class="text-[48px] font-[500] max-w-[413px]">
+              <div
+                class="flex items-center rounded-[16px] bg-black max-[870px]:flex-col"
+              >
+                <div
+                  class="p-[80px_20px] bg-[#fff] items-start rounded-[16px_0_0_16px] max-[870px]:rounded-[0] max-[870px]:w-full max-[650px]:text-center"
+                >
+                  <h1
+                    class="text-[48px] font-[500] max-w-[413px] max-[650px]:m-auto max-[435px]:text-[30px] max-[328px]:text-[25px]"
+                  >
                     Откройте для себя мир поиска и безопасности
                   </h1>
-                  <p class="text-[20px] font-[400] p-[20px_0_60px_0]">
+                  <p
+                    class="text-[20px] font-[400] p-[20px_0_60px_0] max-[870px]:p-[20px_0]"
+                  >
                     Все о компании «Метаскан» за одну минуту
                   </p>
                   <button
-                    class="p-[10px_12px] border border-solid border-[#000] bg-[#000] text-[#fff] rounded-[8px] text-[14px] font-[400]"
+                    class="p-[10px_12px] border border-solid border-[#000] bg-[#000] text-[#fff] rounded-[8px] text-[14px] font-[400] max-[650px]:w-full"
                   >
                     Заказать звонок
                   </button>
@@ -126,22 +134,30 @@
                 <video
                   controls
                   poster="./wrapper-img.png"
-                  class="w-[900px] h-[100%] bg-black"
+                  class="w-[80%] max-[970px]:w-full h-[100%] bg-black"
                   src="./baq948wc6vvi9w0ab203.mp4"
                 ></video>
               </div>
             </div>
             <div class="swiper-slide">
-              <div class="flex items-center rounded-[16px] bg-black">
-                <div class="p-[80px_20px] bg-[#fff] rounded-[16px_0_0_16px]">
-                  <h1 class="text-[48px] font-[500] max-w-[413px]">
+              <div
+                class="flex items-center rounded-[16px] bg-black max-[870px]:flex-col"
+              >
+                <div
+                  class="p-[80px_20px] bg-[#fff] items-start rounded-[16px_0_0_16px] max-[870px]:rounded-[0] max-[870px]:w-full max-[650px]:text-center"
+                >
+                  <h1
+                    class="text-[48px] font-[500] max-w-[413px] max-[650px]:m-auto max-[435px]:text-[30px] max-[328px]:text-[25px]"
+                  >
                     Откройте для себя мир поиска и безопасности
                   </h1>
-                  <p class="text-[20px] font-[400] p-[20px_0_60px_0]">
+                  <p
+                    class="text-[20px] font-[400] p-[20px_0_60px_0] max-[870px]:p-[20px_0]"
+                  >
                     Все о компании «Метаскан» за одну минуту
                   </p>
                   <button
-                    class="p-[10px_12px] border border-solid border-[#000] bg-[#000] text-[#fff] rounded-[8px] text-[14px] font-[400]"
+                    class="p-[10px_12px] border border-solid border-[#000] bg-[#000] text-[#fff] rounded-[8px] text-[14px] font-[400] max-[650px]:w-full"
                   >
                     Заказать звонок
                   </button>
@@ -149,22 +165,30 @@
                 <video
                   controls
                   poster="./wrapper-img.png"
-                  class="w-[900px] h-[100%] bg-black"
+                  class="w-[80%] max-[970px]:w-full h-[100%] bg-black"
                   src="./baq948wc6vvi9w0ab203.mp4"
                 ></video>
               </div>
             </div>
             <div class="swiper-slide">
-              <div class="flex items-center rounded-[16px] bg-black">
-                <div class="p-[80px_20px] bg-[#fff] rounded-[16px_0_0_16px]">
-                  <h1 class="text-[48px] font-[500] max-w-[413px]">
+              <div
+                class="flex items-center rounded-[16px] bg-black max-[870px]:flex-col"
+              >
+                <div
+                  class="p-[80px_20px] bg-[#fff] items-start rounded-[16px_0_0_16px] max-[870px]:rounded-[0] max-[870px]:w-full max-[650px]:text-center"
+                >
+                  <h1
+                    class="text-[48px] font-[500] max-w-[413px] max-[650px]:m-auto max-[435px]:text-[30px] max-[328px]:text-[25px]"
+                  >
                     Откройте для себя мир поиска и безопасности
                   </h1>
-                  <p class="text-[20px] font-[400] p-[20px_0_60px_0]">
+                  <p
+                    class="text-[20px] font-[400] p-[20px_0_60px_0] max-[870px]:p-[20px_0]"
+                  >
                     Все о компании «Метаскан» за одну минуту
                   </p>
                   <button
-                    class="p-[10px_12px] border border-solid border-[#000] bg-[#000] text-[#fff] rounded-[8px] text-[14px] font-[400]"
+                    class="p-[10px_12px] border border-solid border-[#000] bg-[#000] text-[#fff] rounded-[8px] text-[14px] font-[400] max-[650px]:w-full"
                   >
                     Заказать звонок
                   </button>
@@ -172,7 +196,38 @@
                 <video
                   controls
                   poster="./wrapper-img.png"
-                  class="w-[900px] h-[100%] bg-black"
+                  class="w-[80%] max-[970px]:w-full h-[100%] bg-black"
+                  src="./baq948wc6vvi9w0ab203.mp4"
+                ></video>
+              </div>
+            </div>
+            <div class="swiper-slide">
+              <div
+                class="flex items-center rounded-[16px] bg-black max-[870px]:flex-col"
+              >
+                <div
+                  class="p-[80px_20px] bg-[#fff] items-start rounded-[16px_0_0_16px] max-[870px]:rounded-[0] max-[870px]:w-full max-[650px]:text-center"
+                >
+                  <h1
+                    class="text-[48px] font-[500] max-w-[413px] max-[650px]:m-auto max-[435px]:text-[30px] max-[328px]:text-[25px]"
+                  >
+                    Откройте для себя мир поиска и безопасности
+                  </h1>
+                  <p
+                    class="text-[20px] font-[400] p-[20px_0_60px_0] max-[870px]:p-[20px_0]"
+                  >
+                    Все о компании «Метаскан» за одну минуту
+                  </p>
+                  <button
+                    class="p-[10px_12px] border border-solid border-[#000] bg-[#000] text-[#fff] rounded-[8px] text-[14px] font-[400] max-[650px]:w-full"
+                  >
+                    Заказать звонок
+                  </button>
+                </div>
+                <video
+                  controls
+                  poster="./wrapper-img.png"
+                  class="w-[80%] max-[970px]:w-full h-[100%] bg-black"
                   src="./baq948wc6vvi9w0ab203.mp4"
                 ></video>
               </div>
@@ -181,13 +236,116 @@
         </div>
       </div>
     </section>
-    <section>
 
+    <section class="mt-[30px]">
       <div class="container1">
-    >
-          <div class=bg-red>
-
+        <div class="swiper mySwiper2">
+          <div class="swiper-wrapper">
+            <div class="swiper-slide">
+              <div
+                class="card-1 w-[430px] bg-black p-[36px_0_33px_26px] rounded-[16px] "
+              >
+                <h1 class="text-[38px] font-[900] text-[#fff] max-[500px]:text-[25px] ">Распродажа</h1>
+                <p
+                  class="text-[22px] font-[500] text-[#fff] max-w-[195px] py-[21px] "
+                >
+                  Сэкономьте на покупке грунтовые металлоискатели
+                </p>
+                <button
+                  class="border bg-[#ffcd11] p-[10px_16px] rounded-[8px] text-[20px] font-[900]"
+                >
+                  до 45%
+                </button>
+              </div>
+            </div>
+            <div class="swiper-slide">
+              <div
+                class="card-2 w-[430px] bg-[#010231] p-[36px_0_33px_26px] rounded-[16px]"
+              >
+                <h1 class="text-[38px] font-[900] text-[#fff] max-[500px]:text-[25px]">Распродажа</h1>
+                <p
+                  class="text-[22px] font-[500] text-[#fff] max-w-[195px] py-[21px]"
+                >
+                  Сэкономьте на покупке грунтовые металлоискатели
+                </p>
+                <button
+                  class="border bg-[#ffcd11] p-[10px_16px] rounded-[8px] text-[20px] font-[900]"
+                >
+                  до 45%
+                </button>
+              </div>
+            </div>
+            <div class="swiper-slide">
+              <div
+                class="card-3 w-[430px] bg-black p-[36px_0_33px_26px] rounded-[16px]"
+              >
+                <h1 class="text-[38px] font-[900] text-[#fff] max-[500px]:text-[25px]">Распродажа</h1>
+                <p
+                  class="text-[22px] font-[500] text-[#fff] max-w-[195px] py-[21px]"
+                >
+                  Сэкономьте на покупке грунтовые металлоискатели
+                </p>
+                <button
+                  class="border bg-[#ffcd11] p-[10px_16px] rounded-[8px] text-[20px] font-[900]"
+                >
+                  до 45%
+                </button>
+              </div>
+            </div>
+            <div class="swiper-slide">
+              <div
+                class="card-1 w-[430px] bg-black p-[36px_0_33px_26px] rounded-[16px]"
+              >
+                <h1 class="text-[38px] font-[900] text-[#fff] max-[500px]:text-[25px]">Распродажа</h1>
+                <p
+                  class="text-[22px] font-[500] text-[#fff] max-w-[195px] py-[21px]"
+                >
+                  Сэкономьте на покупке грунтовые металлоискатели
+                </p>
+                <button
+                  class="border bg-[#ffcd11] p-[10px_16px] rounded-[8px] text-[20px] font-[900]"
+                >
+                  до 45%
+                </button>
+              </div>
+            </div>
+            <div class="swiper-slide">
+              <div
+                class="card-2 w-[430px] bg-black p-[36px_0_33px_26px] rounded-[16px]"
+              >
+                <h1 class="text-[38px] font-[900] text-[#fff] max-[500px]:text-[25px]">Распродажа</h1>
+                <p
+                  class="text-[22px] font-[500] text-[#fff] max-w-[195px] py-[21px]"
+                >
+                  Сэкономьте на покупке грунтовые металлоискатели
+                </p>
+                <button
+                  class="border bg-[#ffcd11] p-[10px_16px] rounded-[8px] text-[20px] font-[900]"
+                >
+                  до 45%
+                </button>
+              </div>
+            </div>
+            <div class="swiper-slide">
+              <div
+                class="card-3 w-[430px] bg-black p-[36px_0_33px_26px] rounded-[16px]"
+              >
+                <h1 class="text-[38px] font-[900] text-[#fff] max-[500px]:text-[25px]">Распродажа</h1>
+                <p
+                  class="text-[22px] font-[500] text-[#fff] max-w-[195px] py-[21px]"
+                >
+                  Сэкономьте на покупке грунтовые металлоискатели
+                </p>
+                <button
+                  class="border bg-[#ffcd11] p-[10px_16px] rounded-[8px] text-[20px] font-[900]"
+                >
+                  до 45%
+                </button>
+              </div>
+            </div>
           </div>
+          <div class="swiper-pagination"></div>
+        </div>
       </div>
     </section>
 
@@ -197,9 +355,36 @@
     <!-- Initialize Swiper -->
     <script>
       var swiper = new Swiper(".mySwiper", {
-      
         autoplay: {
           delay: 1000,
+        },
+
+        200: {
+          slidesPerView: 1,
+        },
+      });
+      var swiper = new Swiper(".mySwiper2", {
+        slidesPerView: 3,
+        spaceBetween: 30,
+        pagination: {
+          el: ".swiper-pagination",
+          clickable: true,
+        },
+        autoplay: {
+          delay: 1000,
+        },
+        breakpoints: {
+          200: {
+            slidesPerView: 1,
+            spaceBetween: 20,
+          },
+          768: {
+            slidesPerView: 2,
+            spaceBetween: 40,
+          },
+          1024: {
+            slidesPerView: 3,
+          },
         },
       });
     </script>
